Rewrite native calls to be called from the `Injections` side instead of the instrumentation side.
 Also, combine native calls handling with `beforeMethodCall`